Ajout pop-up Mode Rapide

--- a/index.html
+++ b/index.html
@@ -279,6 +279,16 @@
 
     </div>
 
+    <div id="modal-info" class="modal">
+        <div class="modal-content">
+            <h3>💡 Mode Rapide</h3>
+            <p>Quand le Mode Rapide est activé, chaque clic augmente de 100g au lieu de 10g pour les aliments en
+                grammes.</p>
+            <button id="close-modal">J'ai compris</button>
+        </div>
+    </div>
+
+
     <script src="script.js"></script>
 </body>
 
