--- a/index.html
+++ b/index.html
@@ -16,246 +16,240 @@
 
         <!-- === Viandes / Volailles === -->
         <div class="category">
-            <h2>Viandes / Volailles</h2>
-
-            <div class="food-item" data-protein="2.3">
-                <div class="food-info">
-                    <img src="./images/poulet.jpg" alt="Poulet" />
-                    <div class="food-name">Poulet</div>
+            <h2 class="accordion">Viandes / Volailles</h2>
+            <div class="panel">
+                <div class="food-item" data-protein="2.3">
+                    <div class="food-info">
+                        <img src="./images/poulet.jpg" alt="Poulet" />
+                        <div class="food-name">Poulet</div>
+                    </div>
+                    <div class="buttons">
+                        <div class="btn">–</div>
+                        <div class="quantity">0 g</div>
+                        <div class="btn">+</div>
+                    </div>
                 </div>
-                <div class="buttons">
-                    <div class="btn">–</div>
-                    <div class="quantity">0 g</div>
-                    <div class="btn">+</div>
+                <div class="food-item" data-protein="2.2">
+                    <div class="food-info">
+                        <img src="./images/dinde.jpg" alt="Dinde" />
+                        <div class="food-name">Dinde</div>
+                    </div>
+                    <div class="buttons">
+                        <div class="btn">–</div>
+                        <div class="quantity">0 g</div>
+                        <div class="btn">+</div>
+                    </div>
                 </div>
-            </div>
-
-            <div class="food-item" data-protein="2.2">
-                <div class="food-info">
-                    <img src="./images/dinde.jpg" alt="Dinde" />
-                    <div class="food-name">Dinde</div>
+                <div class="food-item" data-protein="2.1">
+                    <div class="food-info">
+                        <img src="./images/boeuf.jpg" alt="Bœuf maigre" />
+                        <div class="food-name">Bœuf maigre</div>
+                    </div>
+                    <div class="buttons">
+                        <div class="btn">–</div>
+                        <div class="quantity">0 g</div>
+                        <div class="btn">+</div>
+                    </div>
                 </div>
-                <div class="buttons">
-                    <div class="btn">–</div>
-                    <div class="quantity">0 g</div>
-                    <div class="btn">+</div>
+                <div class="food-item" data-protein="2.0">
+                    <div class="food-info">
+                        <img src="./images/steak_hache.jpg" alt="Steak haché" />
+                        <div class="food-name">Steak haché 5%</div>
+                    </div>
+                    <div class="buttons">
+                        <div class="btn">–</div>
+                        <div class="quantity">0 g</div>
+                        <div class="btn">+</div>
+                    </div>
                 </div>
-            </div>
-
-            <div class="food-item" data-protein="2.1">
-                <div class="food-info">
-                    <img src="./images/boeuf.jpg" alt="Bœuf maigre" />
-                    <div class="food-name">Bœuf maigre</div>
-                </div>
-                <div class="buttons">
-                    <div class="btn">–</div>
-                    <div class="quantity">0 g</div>
-                    <div class="btn">+</div>
-                </div>
-            </div>
-
-            <div class="food-item" data-protein="2.0">
-                <div class="food-info">
-                    <img src="./images/steak_hache.jpg" alt="Steak haché" />
-                    <div class="food-name">Steak haché 5%</div>
-                </div>
-                <div class="buttons">
-                    <div class="btn">–</div>
-                    <div class="quantity">0 g</div>
-                    <div class="btn">+</div>
-                </div>
-            </div>
-
-            <div class="food-item" data-protein="7.6" data-unit="tranche">
-                <div class="food-info">
-                    <img src="./images/jambon.jpg" alt="Jambon blanc" />
-                    <div class="food-name">Jambon blanc</div>
-                </div>
-                <div class="buttons">
-                    <div class="btn">–</div>
-                    <div class="quantity">0 tranche</div>
-                    <div class="btn">+</div>
+                <div class="food-item" data-protein="7.6" data-unit="tranche">
+                    <div class="food-info">
+                        <img src="./images/jambon.jpg" alt="Jambon blanc" />
+                        <div class="food-name">Jambon blanc</div>
+                    </div>
+                    <div class="buttons">
+                        <div class="btn">–</div>
+                        <div class="quantity">0 tranche</div>
+                        <div class="btn">+</div>
+                    </div>
                 </div>
             </div>
         </div>
 
         <!-- === Poissons === -->
         <div class="category">
-            <h2>Poissons</h2>
-
-            <div class="food-item" data-protein="2.5">
-                <div class="food-info">
-                    <img src="./images/thon.jpg" alt="Thon" />
-                    <div class="food-name">Thon</div>
+            <h2 class="accordion">Poissons</h2>
+            <div class="panel">
+                <div class="food-item" data-protein="2.5">
+                    <div class="food-info">
+                        <img src="./images/thon.jpg" alt="Thon" />
+                        <div class="food-name">Thon</div>
+                    </div>
+                    <div class="buttons">
+                        <div class="btn">–</div>
+                        <div class="quantity">0 g</div>
+                        <div class="btn">+</div>
+                    </div>
                 </div>
-                <div class="buttons">
-                    <div class="btn">–</div>
-                    <div class="quantity">0 g</div>
-                    <div class="btn">+</div>
+                <div class="food-item" data-protein="2.0">
+                    <div class="food-info">
+                        <img src="./images/saumon.jpg" alt="Saumon" />
+                        <div class="food-name">Saumon</div>
+                    </div>
+                    <div class="buttons">
+                        <div class="btn">–</div>
+                        <div class="quantity">0 g</div>
+                        <div class="btn">+</div>
+                    </div>
                 </div>
-            </div>
-
-            <div class="food-item" data-protein="2.0">
-                <div class="food-info">
-                    <img src="./images/saumon.jpg" alt="Saumon" />
-                    <div class="food-name">Saumon</div>
-                </div>
-                <div class="buttons">
-                    <div class="btn">–</div>
-                    <div class="quantity">0 g</div>
-                    <div class="btn">+</div>
-                </div>
-            </div>
-
-            <div class="food-item" data-protein="1.9">
-                <div class="food-info">
-                    <img src="./images/cabillaud.jpg" alt="Cabillaud" />
-                    <div class="food-name">Cabillaud</div>
-                </div>
-                <div class="buttons">
-                    <div class="btn">–</div>
-                    <div class="quantity">0 g</div>
-                    <div class="btn">+</div>
+                <div class="food-item" data-protein="1.9">
+                    <div class="food-info">
+                        <img src="./images/cabillaud.jpg" alt="Cabillaud" />
+                        <div class="food-name">Cabillaud</div>
+                    </div>
+                    <div class="buttons">
+                        <div class="btn">–</div>
+                        <div class="quantity">0 g</div>
+                        <div class="btn">+</div>
+                    </div>
                 </div>
             </div>
         </div>
 
         <!-- === Céréales === -->
         <div class="category">
-            <h2>Céréales</h2>
-
-            <div class="food-item" data-protein="0.25">
-                <div class="food-info">
-                    <img src="./images/riz.jpg" alt="Riz complet" />
-                    <div class="food-name">Riz complet</div>
+            <h2 class="accordion">Céréales</h2>
+            <div class="panel">
+                <div class="food-item" data-protein="0.25">
+                    <div class="food-info">
+                        <img src="./images/riz.jpg" alt="Riz complet" />
+                        <div class="food-name">Riz complet</div>
+                    </div>
+                    <div class="buttons">
+                        <div class="btn">–</div>
+                        <div class="quantity">0 g</div>
+                        <div class="btn">+</div>
+                    </div>
                 </div>
-                <div class="buttons">
-                    <div class="btn">–</div>
-                    <div class="quantity">0 g</div>
-                    <div class="btn">+</div>
+                <div class="food-item" data-protein="0.45">
+                    <div class="food-info">
+                        <img src="./images/quinoa.jpg" alt="Quinoa" />
+                        <div class="food-name">Quinoa</div>
+                    </div>
+                    <div class="buttons">
+                        <div class="btn">–</div>
+                        <div class="quantity">0 g</div>
+                        <div class="btn">+</div>
+                    </div>
                 </div>
-            </div>
-
-            <div class="food-item" data-protein="0.45">
-                <div class="food-info">
-                    <img src="./images/quinoa.jpg" alt="Quinoa" />
-                    <div class="food-name">Quinoa</div>
-                </div>
-                <div class="buttons">
-                    <div class="btn">–</div>
-                    <div class="quantity">0 g</div>
-                    <div class="btn">+</div>
-                </div>
-            </div>
-
-            <div class="food-item" data-protein="1.3">
-                <div class="food-info">
-                    <img src="./images/sarrasin.jpg" alt="Sarrasin" />
-                    <div class="food-name">Sarrasin</div>
-                </div>
-                <div class="buttons">
-                    <div class="btn">–</div>
-                    <div class="quantity">0 g</div>
-                    <div class="btn">+</div>
+                <div class="food-item" data-protein="1.3">
+                    <div class="food-info">
+                        <img src="./images/sarrasin.jpg" alt="Sarrasin" />
+                        <div class="food-name">Sarrasin</div>
+                    </div>
+                    <div class="buttons">
+                        <div class="btn">–</div>
+                        <div class="quantity">0 g</div>
+                        <div class="btn">+</div>
+                    </div>
                 </div>
             </div>
         </div>
 
         <!-- === Légumineuses === -->
         <div class="category">
-            <h2>Légumineuses</h2>
-
-            <div class="food-item" data-protein="0.9">
-                <div class="food-info">
-                    <img src="./images/lentilles_cuites.jpg" alt="Lentilles cuites" />
-                    <div class="food-name">Lentilles cuites</div>
+            <h2 class="accordion">Légumineuses</h2>
+            <div class="panel">
+                <div class="food-item" data-protein="0.9">
+                    <div class="food-info">
+                        <img src="./images/lentilles_cuites.jpg" alt="Lentilles cuites" />
+                        <div class="food-name">Lentilles cuites</div>
+                    </div>
+                    <div class="buttons">
+                        <div class="btn">–</div>
+                        <div class="quantity">0 g</div>
+                        <div class="btn">+</div>
+                    </div>
                 </div>
-                <div class="buttons">
-                    <div class="btn">–</div>
-                    <div class="quantity">0 g</div>
-                    <div class="btn">+</div>
+                <div class="food-item" data-protein="0.85">
+                    <div class="food-info">
+                        <img src="./images/pois_chiches.jpg" alt="Pois chiches" />
+                        <div class="food-name">Pois chiches</div>
+                    </div>
+                    <div class="buttons">
+                        <div class="btn">–</div>
+                        <div class="quantity">0 g</div>
+                        <div class="btn">+</div>
+                    </div>
                 </div>
-            </div>
-
-            <div class="food-item" data-protein="0.85">
-                <div class="food-info">
-                    <img src="./images/pois_chiches.jpg" alt="Pois chiches" />
-                    <div class="food-name">Pois chiches</div>
-                </div>
-                <div class="buttons">
-                    <div class="btn">–</div>
-                    <div class="quantity">0 g</div>
-                    <div class="btn">+</div>
-                </div>
-            </div>
-
-            <div class="food-item" data-protein="0.8">
-                <div class="food-info">
-                    <img src="./images/haricots_rouges.jpg" alt="Haricots rouges" />
-                    <div class="food-name">Haricots rouges</div>
-                </div>
-                <div class="buttons">
-                    <div class="btn">–</div>
-                    <div class="quantity">0 g</div>
-                    <div class="btn">+</div>
+                <div class="food-item" data-protein="0.8">
+                    <div class="food-info">
+                        <img src="./images/haricots_rouges.jpg" alt="Haricots rouges" />
+                        <div class="food-name">Haricots rouges</div>
+                    </div>
+                    <div class="buttons">
+                        <div class="btn">–</div>
+                        <div class="quantity">0 g</div>
+                        <div class="btn">+</div>
+                    </div>
                 </div>
             </div>
         </div>
 
         <!-- === Œufs / Laitages === -->
         <div class="category">
-            <h2>Œufs / Laitages</h2>
-
-            <div class="food-item" data-protein="7.8" data-unit="œuf">
-                <div class="food-info">
-                    <img src="./images/oeufs.jpg" alt="Œuf" />
-                    <div class="food-name">Œuf</div>
+            <h2 class="accordion">Œufs / Laitages</h2>
+            <div class="panel">
+                <div class="food-item" data-protein="7.8" data-unit="œuf">
+                    <div class="food-info">
+                        <img src="./images/oeufs.jpg" alt="Œuf" />
+                        <div class="food-name">Œuf</div>
+                    </div>
+                    <div class="buttons">
+                        <div class="btn">–</div>
+                        <div class="quantity">0 œuf</div>
+                        <div class="btn">+</div>
+                    </div>
                 </div>
-                <div class="buttons">
-                    <div class="btn">–</div>
-                    <div class="quantity">0 œuf</div>
-                    <div class="btn">+</div>
+                <div class="food-item" data-protein="0.8">
+                    <div class="food-info">
+                        <img src="./images/fromages_blanc.jpg" alt="Fromage blanc" />
+                        <div class="food-name">Fromage blanc</div>
+                    </div>
+                    <div class="buttons">
+                        <div class="btn">–</div>
+                        <div class="quantity">0 g</div>
+                        <div class="btn">+</div>
+                    </div>
                 </div>
-            </div>
-
-            <div class="food-item" data-protein="0.8">
-                <div class="food-info">
-                    <img src="./images/fromages_blanc.jpg" alt="Fromage blanc" />
-                    <div class="food-name">Fromage blanc</div>
-                </div>
-                <div class="buttons">
-                    <div class="btn">–</div>
-                    <div class="quantity">0 g</div>
-                    <div class="btn">+</div>
-                </div>
-            </div>
-
-            <div class="food-item" data-protein="1">
-                <div class="food-info">
-                    <img src="./images/skyr.jpg" alt="Skyr" />
-                    <div class="food-name">Skyr</div>
-                </div>
-                <div class="buttons">
-                    <div class="btn">–</div>
-                    <div class="quantity">0 g</div>
-                    <div class="btn">+</div>
+                <div class="food-item" data-protein="1">
+                    <div class="food-info">
+                        <img src="./images/skyr.jpg" alt="Skyr" />
+                        <div class="food-name">Skyr</div>
+                    </div>
+                    <div class="buttons">
+                        <div class="btn">–</div>
+                        <div class="quantity">0 g</div>
+                        <div class="btn">+</div>
+                    </div>
                 </div>
             </div>
         </div>
 
         <!-- === Compléments === -->
         <div class="category">
-            <h2>Compléments</h2>
-
-            <div class="food-item" data-protein="24" data-unit="scoop">
-                <div class="food-info">
-                    <img src="./images/shaker.jpg" alt="Shaker Whey" />
-                    <div class="food-name">Shaker Whey</div>
-                </div>
-                <div class="buttons">
-                    <div class="btn">–</div>
-                    <div class="quantity">0 scoop</div>
-                    <div class="btn">+</div>
+            <h2 class="accordion">Compléments</h2>
+            <div class="panel">
+                <div class="food-item" data-protein="24" data-unit="scoop">
+                    <div class="food-info">
+                        <img src="./images/shaker.jpg" alt="Shaker Whey" />
+                        <div class="food-name">Shaker Whey</div>
+                    </div>
+                    <div class="buttons">
+                        <div class="btn">–</div>
+                        <div class="quantity">0 scoop</div>
+                        <div class="btn">+</div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -279,6 +273,7 @@
 
     </div>
 
+    <!-- === Pop-up Info === -->
     <div id="modal-info" class="modal">
         <div class="modal-content">
             <h3>💡 Mode Rapide</h3>
@@ -287,7 +282,6 @@
             <button id="close-modal">J'ai compris</button>
         </div>
     </div>
-
 
     <script src="script.js"></script>
 </body>
