Couleur du chevron

--- a/index.html
+++ b/index.html
@@ -116,6 +116,57 @@
             </div>
         </div>
 
+        <!-- === Fruits à coques === -->
+        <div class="category">
+            <h2 class="accordion">Fruits à Coques</h2>
+            <div class="panel">
+                <div class="food-item" data-protein="2.1">
+                    <div class="food-info">
+                        <img src="./images/amandes.jpg" alt="Amandes" />
+                        <div class="food-name">Amandes</div>
+                    </div>
+                    <div class="buttons">
+                        <div class="btn">–</div>
+                        <div class="quantity">0 g</div>
+                        <div class="btn">+</div>
+                    </div>
+                </div>
+                <div class="food-item" data-protein="1.8">
+                    <div class="food-info">
+                        <img src="./images/noix_de_cajou.jpg" alt="Noix de cajou" />
+                        <div class="food-name">Noix de cajou</div>
+                    </div>
+                    <div class="buttons">
+                        <div class="btn">–</div>
+                        <div class="quantity">0 g</div>
+                        <div class="btn">+</div>
+                    </div>
+                </div>
+                <div class="food-item" data-protein="2.0">
+                    <div class="food-info">
+                        <img src="./images/Pistaches.jpg" alt="Pistaches" />
+                        <div class="food-name">Pistaches</div>
+                    </div>
+                    <div class="buttons">
+                        <div class="btn">–</div>
+                        <div class="quantity">0 g</div>
+                        <div class="btn">+</div>
+                    </div>
+                </div>
+                <div class="food-item" data-protein="1.9">
+                    <div class="food-info">
+                        <img src="./images/noix_de_pecan.jpg" alt="Noix de pécan" />
+                        <div class="food-name">Noix de pécan</div>
+                    </div>
+                    <div class="buttons">
+                        <div class="btn">–</div>
+                        <div class="quantity">0 g</div>
+                        <div class="btn">+</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- === Céréales === -->
         <div class="category">
             <h2 class="accordion">Céréales</h2>
@@ -124,6 +175,17 @@
                     <div class="food-info">
                         <img src="./images/riz.jpg" alt="Riz complet" />
                         <div class="food-name">Riz complet</div>
+                    </div>
+                    <div class="buttons">
+                        <div class="btn">–</div>
+                        <div class="quantity">0 g</div>
+                        <div class="btn">+</div>
+                    </div>
+                </div>
+                <div class="food-item" data-protein="1.2">
+                    <div class="food-info">
+                        <img src="./images/flocon_avoine.jpg" alt="Flocon d'avoine" />
+                        <div class="food-name">Flocon d'avoine</div>
                     </div>
                     <div class="buttons">
                         <div class="btn">–</div>
@@ -146,6 +208,17 @@
                     <div class="food-info">
                         <img src="./images/sarrasin.jpg" alt="Sarrasin" />
                         <div class="food-name">Sarrasin</div>
+                    </div>
+                    <div class="buttons">
+                        <div class="btn">–</div>
+                        <div class="quantity">0 g</div>
+                        <div class="btn">+</div>
+                    </div>
+                </div>
+                <div class="food-item" data-protein="0.35">
+                    <div class="food-info">
+                        <img src="./images/ble_cuit.jpg" alt="Blé Ebbly cuit" />
+                        <div class="food-name">Blé Ebbly cuit</div>
                     </div>
                     <div class="buttons">
                         <div class="btn">–</div>
@@ -193,6 +266,28 @@
                         <div class="btn">+</div>
                     </div>
                 </div>
+                <div class="food-item" data-protein="0.9">
+                    <div class="food-info">
+                        <img src="./images/lentille_corail.jpg" alt="Lentilles corail" />
+                        <div class="food-name">Lentilles corail</div>
+                    </div>
+                    <div class="buttons">
+                        <div class="btn">–</div>
+                        <div class="quantity">0 g</div>
+                        <div class="btn">+</div>
+                    </div>
+                </div>
+                <div class="food-item" data-protein="0.7">
+                    <div class="food-info">
+                        <img src="./images/haricots_blancs.jpg" alt="Haricots blancs" />
+                        <div class="food-name">Haricots blancs</div>
+                    </div>
+                    <div class="buttons">
+                        <div class="btn">–</div>
+                        <div class="quantity">0 g</div>
+                        <div class="btn">+</div>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -233,6 +328,28 @@
                         <div class="btn">+</div>
                     </div>
                 </div>
+                <div class="food-item" data-protein="0.9">
+                    <div class="food-info">
+                        <img src="./images/yaourt_grec.jpg" alt="Yaourt grec nature" />
+                        <div class="food-name">Yaourt grec nature</div>
+                    </div>
+                    <div class="buttons">
+                        <div class="btn">–</div>
+                        <div class="quantity">0 g</div>
+                        <div class="btn">+</div>
+                    </div>
+                </div>
+                <div class="food-item" data-protein="0.82">
+                    <div class="food-info">
+                        <img src="./images/fromages_blanc.jpg" alt="Fromage blanc 0%" />
+                        <div class="food-name">Fromage blanc 0%</div>
+                    </div>
+                    <div class="buttons">
+                        <div class="btn">–</div>
+                        <div class="quantity">0 g</div>
+                        <div class="btn">+</div>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -251,8 +368,43 @@
                         <div class="btn">+</div>
                     </div>
                 </div>
+
+                <div class="food-item" data-protein="18" data-unit="barre">
+                    <div class="food-info">
+                        <img src="./images/barre_proteine.jpg" alt="Barre protéinée" />
+                        <div class="food-name">Barre protéinée</div>
+                    </div>
+                    <div class="buttons">
+                        <div class="btn">–</div>
+                        <div class="quantity">0 barre</div>
+                        <div class="btn">+</div>
+                    </div>
+                </div>
+                <div class="food-item" data-protein="8" data-unit="portion">
+                    <div class="food-info">
+                        <img src="./images/beurre_de_cachuete.jpg" alt="Beurre de cacahuète protéiné" />
+                        <div class="food-name">Beurre de cacahuète protéiné</div>
+                    </div>
+                    <div class="buttons">
+                        <div class="btn">–</div>
+                        <div class="quantity">0 portion</div>
+                        <div class="btn">+</div>
+                    </div>
+                </div>
+                <div class="food-item" data-protein="25" data-unit="bouteille">
+                    <div class="food-info">
+                        <img src="./images/boisson_proteine.jpg" alt="Boisson prête à boire" />
+                        <div class="food-name">Boisson prête à boire</div>
+                    </div>
+                    <div class="buttons">
+                        <div class="btn">–</div>
+                        <div class="quantity">0 bouteille</div>
+                        <div class="btn">+</div>
+                    </div>
+                </div>
             </div>
         </div>
+
 
         <!-- === Toggle Mode Rapide stylé === -->
         <div class="mode-rapide-container">
@@ -279,8 +431,12 @@
             <h3>💡 Mode Rapide</h3>
             <p>Quand le Mode Rapide est activé, chaque clic augmente de 100g au lieu de 10g pour les aliments en
                 grammes.</p>
+
+            <p class="signature">Développé par BALLAND Lucas – <a href="mailto:lucasballand101@gmail.com">lucasballand101@gmail.com</a></p>
+
             <button id="close-modal">J'ai compris</button>
         </div>
+
     </div>
 
     <script src="script.js"></script>
