--- a/index.html
+++ b/index.html
@@ -432,12 +432,19 @@
             <p>Quand le Mode Rapide est activé, chaque clic augmente de 100g au lieu de 10g pour les aliments en
                 grammes.</p>
 
-            <p class="signature">Développé par BALLAND Lucas – <a href="mailto:lucasballand101@gmail.com">lucasballand101@gmail.com</a></p>
+            <p class="signature">Développé par BALLAND Lucas – <a
+                    href="mailto:lucasballand101@gmail.com">lucasballand101@gmail.com</a></p>
 
             <button id="close-modal">J'ai compris</button>
         </div>
 
     </div>
+
+    <div class="mascotte" style="display:none;">
+        <img src="./images/poulet_venere.png" alt="Poulet Musclé">
+        <div class="bulle"></div>
+    </div>
+
 
     <script src="script.js"></script>
 </body>
