--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
 
     </div>
 
-    <div class="mascotte" style="display:none;">
+    <div class="mascotte">
         <img src="./images/poulet_venere.png" alt="Poulet Musclé">
         <div class="bulle"></div>
     </div>
