--- a/index.html
+++ b/index.html
@@ -405,16 +405,17 @@
             </div>
         </div>
 
+        <!-- === Mode Rapide sticky === -->
 
-        <!-- === Toggle Mode Rapide stylé === -->
         <div class="mode-rapide-container">
+            <div class="mode-rapide-hint">Mode Rapide</div>
             <label class="switch">
                 <input type="checkbox" id="mode-rapide">
                 <span class="slider"></span>
             </label>
-            <span id="mode-text">OFF</span>
-            <span>Mode Rapide</span>
         </div>
+
+
 
         <!-- === Total & Barre === -->
         <button id="reset-btn">Réinitialiser</button>
